# qinlong_v2

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  cls_fetch_guide.md
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  test_e2e.py
backend/migrations/: 001_init.sql  002_ai_config.sql  003_market_data.sql  004_unified_market.sql  005_limit_pool_unified.sql
backend/src/app/: main.py  scheduler.py
backend/src/app/ai/: anthropic_client.py  client.py  runner.py
backend/src/app/api/: ai.py  market.py  positions.py  scheduler.py  settings.py  watchlist.py
backend/src/app/core/: config.py  db.py
backend/src/app/fetch/: bj_stock.py  cls_client.py  hot_plate.py  index_home.py  market.py  plates.py  stocks.py
backend/src/app/ingest/: indices.py  market.py  plates.py  stocks.py
backend/src/app/normalize/: indices.py  market.py  plates.py  stocks.py
docs/: database.md
docs/tasks/: README.md  行情页.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppDrawer.tsx
frontend/src/components/dashboard/: AIChat.tsx  AINewsPanel.tsx  AssetPanel.tsx  MarketWidthPanel.tsx  SectorFlowPanel.tsx  SentimentPanel.tsx  (+1 more)
frontend/src/context/: DrawerContext.tsx
frontend/src/pages/: AIMasterPage.tsx  AiPage.tsx  DashboardPage.tsx  IntelPage.tsx  MarketDetailPage.tsx  MarketPage.tsx  PositionsPage.tsx  SchedulerPage.tsx  SettingsPage.tsx  WatchlistPage.tsx
frontend/src/types/: index.ts
