[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qinlong-v2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "apscheduler>=3.10.4",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "openai>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
